--- a/javascript/ex001/index.html
+++ b/javascript/ex001/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício Javascript</title>
+    <title>exercicio javascript</title>
 </head>
 <body>
-    <h1>Meu Primeiro Javascript</h1>
+    <h1>Cristiano Cardoso de Souza</h1>
 
 
-      <script>alert("Olá, Mundo!") </script>
+      <script>alert("Site Criado Por:") </script>
 </body>
 </html>
