--- a/javascript/ex001/index.html
+++ b/javascript/ex001/index.html
@@ -7,7 +7,7 @@
     <title>exercicio javascript</title>
 </head>
 <body>
-    <h1>Cristiano Cardoso de Souza</h1>
+    <h1>Jéssica não sabe</h1>
 
 
       <script>alert("Site Criado Por:") </script>
